# lite-sync

./: Cargo.toml  README.md  README_CN.md
src/: lib.rs  shim.rs
tests/: spsc.rs
tests/oneshot/: mod.rs
