[package]
name = "lite-sync"
version = "0.2.4"
edition = "2024"
authors = ["ShaoG <shaog.rs@gmail.com>"]
description = "Fast, lightweight async primitives: SPSC channel, oneshot, notify, and atomic waker"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ShaoG-R/lite-sync"
homepage = "https://github.com/ShaoG-R/lite-sync"
documentation = "https://docs.rs/lite-sync"
keywords = ["async", "spsc", "channel", "oneshot", "performance"]
categories = ["asynchronous", "concurrency"]

[dependencies]
smallring = { version = "=0.2.2", optional = true }
loom = { version = "0.7.2", features = ["futures"], optional = true }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
criterion = { version = "0.7.0", features = ["async_tokio"] }
futures = "0.3.31"
tokio-test = "0.4.4"

[features]
default = ["std", "alloc", "spsc"]
alloc = []
spsc = ["dep:smallring", "alloc"]
loom = ["dep:loom", "smallring?/loom"]
std = []

[[bench]]
name = "notify_benchmark"
harness = false

[[bench]]
name = "spsc_benchmark"
harness = false

[[bench]]
name = "oneshot_lite_benchmark"
harness = false

[[bench]]
name = "oneshot_generic_benchmark"
harness = false