[package]
name = "lite-sync"
version = "0.3.0"
edition = "2024"
authors = ["ShaoG <shaogme@gmail.com>"]
description = "Fast, lightweight async primitives: SPSC channel, oneshot, notify, and atomic waker"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shaogme/lite-sync"
homepage = "https://github.com/shaogme/lite-sync"
documentation = "https://docs.rs/lite-sync"
keywords = ["async", "spsc", "channel", "oneshot", "performance"]
categories = ["asynchronous", "concurrency"]

[dependencies]
smallring = { version = "=0.2.3", optional = true }
loom = { version = "0.7.2", features = ["futures"], optional = true }
portable-atomic = { version = "1", default-features = false, optional = true }
portable-atomic-util = { version = "0.2", default-features = false, features = [
    "alloc",
], optional = true }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
criterion = { version = "0.7.0", features = ["async_tokio"] }
futures = "0.3.31"
tokio-test = "0.4.4"

[features]
default = ["std", "alloc", "spsc"]
alloc = []
spsc = ["dep:smallring", "alloc"]
loom = ["dep:loom", "smallring?/loom"]
std = []
portable-atomic = [
    "dep:portable-atomic",
    "smallring?/portable-atomic",
]
portable-atomic-util = [
    "dep:portable-atomic-util",
    "portable-atomic",
    "alloc",
]

[[bench]]
name = "notify_benchmark"
harness = false

[[bench]]
name = "spsc_benchmark"
harness = false

[[bench]]
name = "oneshot_lite_benchmark"
harness = false

[[bench]]
name = "oneshot_generic_benchmark"
harness = false
